<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TableRow android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/series_name" />
		<EditText android:id="@+id/series_name" 
		  	android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</TableRow>

	<TableRow android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/season_num" />
		<EditText android:id="@+id/season_num"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:scrollbars="vertical" />
	</TableRow>
	
	<TableRow android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/episode_num" />
		<EditText android:id="@+id/episode_num"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:scrollbars="vertical" />
	</TableRow>
	
	<TableRow>
		<Button android:id="@+id/confirm" 
			android:text="@string/confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</TableRow>

</TableLayout>