<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/series_id" 
	android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
	<TextView android:id="@+id/series_name" 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="3"/>
	    
	<TextView android:text="@string/season_code"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="right"/>
	<TextView android:id="@+id/season_num"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="right"/>
	    
	<Button android:text="@string/plus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/season_plus_button"
		android:gravity="right"/>
		
	<TextView android:text="@string/episode_code"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="right"/>
	<TextView android:id="@+id/episode_num"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="right"/>

	<Button android:text="@string/plus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/episode_plus_button"
		android:gravity="right"/>
</LinearLayout>